Swag edits
